--- a/style.css
+++ b/style.css
@@ -1,27 +1,47 @@
 body {
-  font-family: sans-serif;
+  font-family: sans-serif; 
 }
-.header{
+html{
+  @media (max-width: 767px){
+    display: flex;
+  }
+}
+.header {
   display: flex;
   align-items: center;
   justify-content: space-between;
   border-bottom: 1px solid #ccc;
 
+  @media (max-width: 767px){
+    display: flex;
+    width: 100%;
+    flex-direction: column;
+    text-align: center;
+  }
 }
+
 .toolbar {
   display: flex;
   align-items: center;
   justify-content: flex-start;
   padding: 10px;
   border-bottom: 1px solid #ccc;
-}
 
+  @media (max-width: 767px){
+    padding: 5px;
+    /* flex-wrap: wrap; */
+    justify-content: center;
+  }
+}
 
 .toolbar button {
   margin-right: 10px;
   background: none;
   border: none;
   cursor: pointer;
+  @media (max-width: 767px){
+    margin: 5px;
+  }
 }
 
 .toolbar button i {
@@ -46,6 +66,9 @@ table th,
 table td {
   padding: 10px;
   border: 1px solid #ccc;
+  @media (max-width: 767px){
+    padding: 5px;
+  }
 }
 
 table th {
