--- a/style.css
+++ b/style.css
@@ -1,24 +1,30 @@
-body {
-  font-family: sans-serif; 
-}
-html{
-  @media (max-width: 767px){
+@media (max-width: 767px) {
+  html {
     display: flex;
   }
+  
+  .header h2 {
+    margin: 0.5rem;
+    font-size: 20px;
+  }
+  
+  .toolbar {
+    padding: 5px;
+    justify-content: center;
+  }
+  
+  .toolbar button {
+    margin: 5px;
+  }
 }
+
 .header {
   display: flex;
   align-items: center;
   justify-content: space-between;
   border-bottom: 1px solid #ccc;
-
-  @media (max-width: 767px){
-    display: flex;
-    width: 100%;
-    flex-direction: column;
-    text-align: center;
-  }
 }
+
 
 .toolbar {
   display: flex;
@@ -26,12 +32,6 @@ html{
   justify-content: flex-start;
   padding: 10px;
   border-bottom: 1px solid #ccc;
-
-  @media (max-width: 767px){
-    padding: 5px;
-    /* flex-wrap: wrap; */
-    justify-content: center;
-  }
 }
 
 .toolbar button {
@@ -39,9 +39,6 @@ html{
   background: none;
   border: none;
   cursor: pointer;
-  @media (max-width: 767px){
-    margin: 5px;
-  }
 }
 
 .toolbar button i {
@@ -64,15 +61,18 @@ table {
 
 table th,
 table td {
-  padding: 10px;
+  margin: 10px;
   border: 1px solid #ccc;
-  @media (max-width: 767px){
-    padding: 5px;
-  }
+  padding: 10px;
 }
 
 table th {
   cursor: pointer;
+}
+
+table th span {
+  font-size: 12px;
+  color: #888;
 }
 
 table th:hover {
