--- a/style.css
+++ b/style.css
@@ -1,20 +1,40 @@
 @media (max-width: 767px) {
   html {
     display: flex;
+    font-size: 16px; 
+    line-height: 1.5; 
   }
   
   .header h2 {
-    margin: 0.5rem;
-    font-size: 20px;
+    font-size: 24px; 
   }
   
   .toolbar {
-    padding: 5px;
+    display: flex;
     justify-content: center;
+    border-bottom: 1px solid #ccc;
   }
   
   .toolbar button {
     margin: 5px;
+    font-size: 16px;
+    min-width: 50px; 
+  }
+  
+  table {
+    margin-top: 20px; 
+  }
+  
+  table th,
+  table td {
+    margin: 5px;
+    padding: 10px;
+    font-size: 16px; 
+  }
+  
+  table th span {
+    font-size: 12px;
+    color: #888;
   }
 }
 
@@ -39,6 +59,9 @@
   background: none;
   border: none;
   cursor: pointer;
+  min-width: 50px;
+  font-size: 16px;
+
 }
 
 .toolbar button i {
